# e2a

./: .dockerignore  .env.example  .gitignore  .testcoverage.yml  AGENTIFY-ADDON-SETUP.md  AGENTS.md  BACKEND_TODO.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.prober  Makefile  NOTICE  README.md  REDESIGN.md  SECURITY.md  autonomous-repo.config.yml  config.example.yaml  docker-compose.yaml  go.mod  go.sum  package-lock.json  package.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.cursor-plugin/: marketplace.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: build-image.yml  (+9 more)
api/: oasdiff-ignore-errors.txt  oasdiff-ignore-warnings.txt  oasdiff-levels.txt  openapi.yaml
cli/: CHANGELOG.md  README.md  package.json  tsconfig.json  vitest.config.ts  vitest.e2e.config.ts
design-system/: .gitignore  README.md  package.json  tsconfig.build.json  tsconfig.json  tsup.config.ts
docs/: api-compatibility-gate.md  api.md  data-handling.md  deployment.md  events.md  observability.md  templates.md
examples/adk-cloud-webhook/: .env.example  README.md  agent.py  delivery_state.py  pyproject.toml  test_delivery_state.py  test_live_integration.py  test_webhook.py  webhook.py
examples/agent-framework-webhooks/python/: .env.example  pyproject.toml
examples/agent-framework-webhooks/python/agent_webhooks/: __init__.py  agent.py  app.py  contracts.py  delivery_state.py  dry_run.py  handler.py  prompt.py
examples/agent-framework-webhooks/python/agent_webhooks/adapters/: __init__.py  adk.py  anthropic.py  fake.py  langchain.py  openai.py
examples/agent-framework-webhooks/python/tests/: test_adapters.py  test_agent.py  test_app.py  test_delivery_state.py  test_dry_run.py  test_handler.py  test_prompt.py
mcp/: Dockerfile  Dockerfile.dockerignore  README.md  package.json  server.json  tool-names.v1.json  tsconfig.json  tsconfig.type-tests.json  vitest.config.ts
migrations/: 001_init.sql  002_multi_recipient.sql  003_hitl.sql  004_per_user_signing_secrets.sql  005_reply_to.sql  006_oauth.sql  006_oauth_fosite.sql  007_oauth_fosite.sql  008_loopback_method.sql  009_usage_events_user_created_idx.sql  010_usage_events_created_idx.sql  011_api_keys_expires_at.sql  012_hitl_reviewer.sql  013_domain_enrichment.sql  014_per_domain_dkim.sql  015_idempotency_and_send_attempts.sql  016_account_limits.sql  017_account_limits_last_event_at.sql  018_account_limits_last_event_id.sql  019_message_type_forward.sql  020_message_labels.sql  021_message_labels_index.sql  022_conversation_index.sql  023_webhooks.sql  024_account_limits_max_webhooks.sql  025_webhook_subscriber_deliveries.sql  026_webhook_events.sql  027_retry_envelope_extension.sql  028_webhook_subscriber_deliveries_event_id.sql  029_drop_agent_mode_webhook_url.sql  030_domain_sending_identity.sql  031_delivery_feedback.sql  032_inbound_auth_verdict.sql  033_inbound_policy.sql  034_api_key_scope.sql  035_agent_assertion_version.sql  036_hitl_mode.sql  037_account_class.sql  039_messages_storage_update_meter.sql  040_screening.sql  (+48 more)
redesign/: README.md  api-keys.jsx  dashboard.jsx  domains.jsx  get-started.jsx  landing.jsx  loft-tokens.css  pending.jsx  settings.jsx  shared.jsx
scripts/: agentify-verify-setup.sh  check-mcp-tool-compat.mjs  check-mcp-tool-compat.test.mjs  check-openapi-compat.sh  check-repository-text-integrity.sh  check-sdk-example-contracts.mjs  check-sdk-operation-coverage.py  check-sdk-version-sync.mjs  plugin-agent-guidance.test.mjs  strip-unused-generated-imports.py  sync-agent-docs.mjs  sync-agent-docs.test.mjs  test-openapi-compat.sh  test_check_sdk_operation_coverage.py  test_strip_unused_generated_imports.py  validate-plugin.mjs
sdks/python/: CHANGELOG.md  README.md  codegen-requirements.txt  pyproject.toml
sdks/python/scripts/: generate-oag.sh  strip-enum-validators.py
sdks/python/src/e2a/: __init__.py
sdks/python/src/e2a/v1/: __init__.py  _event_lifecycle.py  _retry.py  api.py  async_client.py  client.py  errors.py  handler.py  inbound.py  pagination.py  sync_client.py  webhook_signature.py  websocket.py
sdks/python/src/e2a/v1/oag/: README.md  __init__.py  api_client.py  configuration.py  rest.py
sdks/python/src/e2a/v1/oag/api/: __init__.py  account_api.py  agents_api.py  conversations_api.py  domains_api.py  events_api.py  messages_api.py  meta_api.py  webhooks_api.py
sdks/python/src/e2a/v1/oag/models/: __init__.py  agent_identity.py  agent_view.py  api_key_export_entry.py  approve_request.py  check_result.py  conversation_detail_view.py  conversation_summary_view.py  create_agent_request.py  create_webhook_request.py  delivery_status_json.py  deployment_info_view.py  dns_record_view.py  dns_records_view.py  domain.py  domain_view.py  error_body.py  error_envelope.py  event_json.py  forward_request.py  limits_view.py  list_agents_output_body.py  list_domains_output_body.py  list_webhooks_output_body.py  message.py  message_parsed_view.py  message_summary_view.py  message_view.py  page_conversation_summary_view.py  page_event_json.py  page_message_summary_view.py  page_webhook_delivery_view.py  redeliver_delivery.py  redeliver_view.py  reject_result_view.py  reply_request.py  result.py  rotate_secret_output_body.py  send_email_request.py  send_result_view.py  (+12 more)
sdks/python/tests/: test_contract.py  test_e2e.py  test_enum_forward_compat.py  test_exports.py  test_generated_models.py  test_idempotency.py  test_v1_api.py  test_v1_async_client.py  test_v1_client.py  test_v1_client_side_validation.py  test_v1_errors.py  test_v1_events.py  test_v1_handler.py  test_v1_inbound.py  test_v1_pagination.py  test_v1_retry.py  test_v1_sync_client.py  test_v1_websocket.py  test_webhook_payloads.py  test_webhook_signature.py  typecheck_event_envelope.py  typecheck_inbound.py  typecheck_lifecycle_payloads.py
skills/: SKILL.md
web/: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  Dockerfile.dockerignore  eslint.config.mjs  jest.config.ts  jest.env.ts  jest.setup.ts  next.config.ts  package-lock.json  package.json
(+1333 files in other folders)
