[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adk-cloud-webhook"
version = "0.1.0"
description = "Example: a Google ADK agent with an e2a email inbox, delivered via webhook."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  # Keep this webhook tutorial on the verified ADK 1.x API. The separate MCP
  # quick start under mcp/examples/adk targets the current ADK 2.x line.
  "google-adk>=1.31,<2",
  "e2a>=5,<6",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-dotenv>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agent", "webhook", "delivery_state"]
only-include = ["agent.py", "webhook.py", "delivery_state.py"]
