[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "e2a"
version = "5.2.0"
description = "Python SDK for the e2a protocol — email-to-agent authentication"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "Mnexa AI", email = "josh@mnexa.ai" }]
keywords = ["email", "agent", "authentication", "e2a", "webhook"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
]
dependencies = [
    "httpx>=0.24",
    "pydantic>=2.12,<3",
    # Runtime deps of the OpenAPI-Generator /v1 client base (e2a.v1.generated, httpx
    # library): date parsing, the Retry type in configuration, and Self on the
    # generated pydantic v2 models.
    "python-dateutil>=2.8",
    "urllib3>=1.25",
    "typing-extensions>=4.7",
]

[tool.hatch.build.targets.wheel]
# src layout: ship the e2a package (incl. PEP 561 py.typed markers at every
# hand-written level, not just the generated sub-package).
packages = ["src/e2a"]
artifacts = ["src/e2a/py.typed", "src/e2a/v1/py.typed", "src/e2a/v1/generated/py.typed"]

[project.urls]
Homepage = "https://e2a.dev"
Repository = "https://github.com/Mnexa-AI/e2a"
Documentation = "https://e2a.dev"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-httpx", "anyio[trio]", "pyyaml>=6", "build", "twine"]
ws = ["websockets>=14"]
